--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -173,84 +173,84 @@
   <!--*********************************************************************************************-->
   <!--****************************************** TEAM *********************************************-->
   <!--*********************************************************************************************-->
-<!--  <section id="team" class="team section-bg">-->
-<!--    <div class="container">-->
+  <!--  <section id="team" class="team section-bg">-->
+  <!--    <div class="container">-->
 
-<!--      <div class="section-title" data-aos="fade-up">-->
-<!--        <h2>Nuestro Equipo</h2>-->
-<!--        <p>En Grupo Valle contamos con los mejores profesionales del mercado.</p>-->
-<!--      </div>-->
+  <!--      <div class="section-title" data-aos="fade-up">-->
+  <!--        <h2>Nuestro Equipo</h2>-->
+  <!--        <p>En Grupo Valle contamos con los mejores profesionales del mercado.</p>-->
+  <!--      </div>-->
 
-<!--      <div class="row">-->
+  <!--      <div class="row">-->
 
-<!--        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">-->
-<!--          <div class="member" data-aos="fade-up" data-aos-delay="100">-->
-<!--            <div class="member-img bg-secondary">-->
-<!--              <img src="assets/img/team/woman.png" class="img-fluid" alt="">-->
-<!--              <div class="social">-->
-<!--                <a href=""><i class="bi bi-google"></i></a>-->
-<!--                <a href=""><i class="bi bi-linkedin"></i></a>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <div class="member-info">-->
-<!--              <h4>Vanessa Valle</h4>-->
-<!--              <span>Gerente General</span>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
+  <!--        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">-->
+  <!--          <div class="member" data-aos="fade-up" data-aos-delay="100">-->
+  <!--            <div class="member-img bg-secondary">-->
+  <!--              <img src="assets/img/team/woman.png" class="img-fluid" alt="">-->
+  <!--              <div class="social">-->
+  <!--                <a href=""><i class="bi bi-google"></i></a>-->
+  <!--                <a href=""><i class="bi bi-linkedin"></i></a>-->
+  <!--              </div>-->
+  <!--            </div>-->
+  <!--            <div class="member-info">-->
+  <!--              <h4>Vanessa Valle</h4>-->
+  <!--              <span>Gerente General</span>-->
+  <!--            </div>-->
+  <!--          </div>-->
+  <!--        </div>-->
 
-<!--        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">-->
-<!--          <div class="member" data-aos="fade-up" data-aos-delay="200">-->
-<!--            <div class="member-img bg-secondary">-->
-<!--              <img src="assets/img/team/man.png" class="img-fluid" alt="">-->
-<!--              <div class="social">-->
-<!--                <a href=""><i class="bi bi-google"></i></a>-->
-<!--                <a href=""><i class="bi bi-linkedin"></i></a>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <div class="member-info">-->
-<!--              <h4>Herbert Pro</h4>-->
-<!--              <span>Ing. Sistemas</span>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
+  <!--        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">-->
+  <!--          <div class="member" data-aos="fade-up" data-aos-delay="200">-->
+  <!--            <div class="member-img bg-secondary">-->
+  <!--              <img src="assets/img/team/man.png" class="img-fluid" alt="">-->
+  <!--              <div class="social">-->
+  <!--                <a href=""><i class="bi bi-google"></i></a>-->
+  <!--                <a href=""><i class="bi bi-linkedin"></i></a>-->
+  <!--              </div>-->
+  <!--            </div>-->
+  <!--            <div class="member-info">-->
+  <!--              <h4>Herbert Pro</h4>-->
+  <!--              <span>Ing. Sistemas</span>-->
+  <!--            </div>-->
+  <!--          </div>-->
+  <!--        </div>-->
 
-<!--        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">-->
-<!--          <div class="member" data-aos="fade-up" data-aos-delay="300">-->
-<!--            <div class="member-img bg-secondary">-->
-<!--              <img src="assets/img/team/woman.png" class="img-fluid" alt="">-->
-<!--              <div class="social">-->
-<!--                <a href=""><i class="bi bi-google"></i></a>-->
-<!--                <a href=""><i class="bi bi-linkedin"></i></a>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <div class="member-info">-->
-<!--              <h4>Elizabeth Valle</h4>-->
-<!--              <span>Lic. Contable</span>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
+  <!--        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">-->
+  <!--          <div class="member" data-aos="fade-up" data-aos-delay="300">-->
+  <!--            <div class="member-img bg-secondary">-->
+  <!--              <img src="assets/img/team/woman.png" class="img-fluid" alt="">-->
+  <!--              <div class="social">-->
+  <!--                <a href=""><i class="bi bi-google"></i></a>-->
+  <!--                <a href=""><i class="bi bi-linkedin"></i></a>-->
+  <!--              </div>-->
+  <!--            </div>-->
+  <!--            <div class="member-info">-->
+  <!--              <h4>Elizabeth Valle</h4>-->
+  <!--              <span>Lic. Contable</span>-->
+  <!--            </div>-->
+  <!--          </div>-->
+  <!--        </div>-->
 
-<!--        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">-->
-<!--          <div class="member" data-aos="fade-up" data-aos-delay="400">-->
-<!--            <div class="member-img bg-secondary">-->
-<!--              <img src="assets/img/team/woman.png" class="img-fluid" alt="">-->
-<!--              <div class="social">-->
-<!--                <a href=""><i class="bi bi-google"></i></a>-->
-<!--                <a href=""><i class="bi bi-linkedin"></i></a>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <div class="member-info">-->
-<!--              <h4>Rosario Valle</h4>-->
-<!--              <span>Lic. Legal</span>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
+  <!--        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">-->
+  <!--          <div class="member" data-aos="fade-up" data-aos-delay="400">-->
+  <!--            <div class="member-img bg-secondary">-->
+  <!--              <img src="assets/img/team/woman.png" class="img-fluid" alt="">-->
+  <!--              <div class="social">-->
+  <!--                <a href=""><i class="bi bi-google"></i></a>-->
+  <!--                <a href=""><i class="bi bi-linkedin"></i></a>-->
+  <!--              </div>-->
+  <!--            </div>-->
+  <!--            <div class="member-info">-->
+  <!--              <h4>Rosario Valle</h4>-->
+  <!--              <span>Lic. Legal</span>-->
+  <!--            </div>-->
+  <!--          </div>-->
+  <!--        </div>-->
 
-<!--      </div>-->
+  <!--      </div>-->
 
-<!--    </div>-->
-<!--  </section>-->
+  <!--    </div>-->
+  <!--  </section>-->
   <!-- END - TEAM -->
 
   <!--*********************************************************************************************-->
@@ -269,7 +269,8 @@
           <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bx bxs-calculator"></i></div>
             <h4 class="title"><a href="">Asesoría contable</a></h4>
-            <p class="description">Declaración de impuestos, auditorias contables, actualización de libros, gestión de planillas y más.</p>
+            <p class="description">Declaración de impuestos, auditorias contables, actualización de libros, gestión de
+              planillas y más.</p>
           </div>
         </div>
 
@@ -277,7 +278,8 @@
           <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="ri-scales-3-line"></i></div>
             <h4 class="title"><a href="">Asesoría legal</a></h4>
-            <p class="description">Constitución de empresas, aceleración de trámites notariales, formalización de minería informal, derecho de familia y más.</p>
+            <p class="description">Constitución de empresas, aceleración de trámites notariales, formalización de
+              minería informal, derecho de familia y más.</p>
           </div>
         </div>
 
@@ -285,7 +287,8 @@
           <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bx bxs-briefcase"></i></div>
             <h4 class="title"><a href="">Asesoría laboral</a></h4>
-            <p class="description">Contratos, nóminas, altas y bajas de personal, cumplimiento de normativa laboral, selección de trabajadores y más.</p>
+            <p class="description">Contratos, nóminas, altas y bajas de personal, cumplimiento de normativa laboral,
+              selección de trabajadores y más.</p>
           </div>
         </div>
 
@@ -293,7 +296,8 @@
           <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bx-code-block"></i></div>
             <h4 class="title"><a href="">Asesoría tecnológica</a></h4>
-            <p class="description">Asesoría e implementación de nuevas tecnologías, desarrollo de sistemas, instalación de redes, venta y alquiler de equipos de cómputo y más.</p>
+            <p class="description">Asesoría e implementación de nuevas tecnologías, desarrollo de sistemas, instalación
+              de redes, venta y alquiler de equipos de cómputo y más.</p>
           </div>
         </div>
 
@@ -375,7 +379,7 @@
           <div class="swiper-slide">
             <div class="testimonial-wrap">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/man.png" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/hbc.jpg" class="testimonial-img" alt="">
                 <h3>Carlos Vilcapoma</h3>
                 <h4>Gerente - HBC LOGISTIC</h4>
                 <p>
@@ -392,41 +396,7 @@
           <div class="swiper-slide">
             <div class="testimonial-wrap">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/man.png" class="testimonial-img" alt="">
-                <h3>Luis Pro Castillo</h3>
-                <h4>Gerente - Endgame Gaming Arena</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Grupo Valle administra nuestro servidor ccboot, nuestras redes y el soporte necesario para no detener
-                  nuestra productividad. Muy buen servicio.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <!-- CASE 3 -->
-          <div class="swiper-slide">
-            <div class="testimonial-wrap">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/man.png" class="testimonial-img" alt="">
-                <h3>Jaime Valdez</h3>
-                <h4>Gerente - Titan Rieles</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Grupo Valle desarrolló nuestro website, administra nuestros productos online y nuestras campañas de
-                  Google AdSense. Demuestran mucho compromiso y puntualidad.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <!-- CASE 4 -->
-          <div class="swiper-slide">
-            <div class="testimonial-wrap">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/man.png" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/boticas-peru.jpg" class="testimonial-img" alt="">
                 <h3>Davis Carreño</h3>
                 <h4>Jefe de inventarios - Bóticas Perú</h4>
                 <p>
@@ -439,11 +409,46 @@
             </div>
           </div>
 
+          <!-- CASE 3 -->
+          <div class="swiper-slide">
+            <div class="testimonial-wrap">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/endgame.jpg" class="testimonial-img" alt="">
+                <h3>Luis Pro Castillo</h3>
+                <h4>Gerente - Endgame Gaming Arena</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Grupo Valle administra nuestro servidor ccboot, nuestras redes y el soporte necesario para no detener
+                  nuestra productividad. Muy buen servicio.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- CASE 4 -->
+          <div class="swiper-slide">
+            <div class="testimonial-wrap">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/titan-riles.jpg" class="testimonial-img" alt="">
+                <h3>Jaime Valdez</h3>
+                <h4>Gerente - Titan Rieles</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Grupo Valle desarrolló nuestro website, administra nuestros productos online y nuestras campañas de
+                  Google AdSense. Demuestran mucho compromiso y puntualidad.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div>
+          </div>
+
+
           <!-- CASE 5 -->
           <div class="swiper-slide">
             <div class="testimonial-wrap">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/man.png" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/hl.jpg" class="testimonial-img" alt="">
                 <h3>Henry Cossio</h3>
                 <h4>Gerente - HL Ingeniería y servicios</h4>
                 <p>
@@ -455,6 +460,7 @@
               </div>
             </div>
           </div>
+
         </div>
 
         <div class="swiper-pagination"></div>
@@ -511,48 +517,50 @@
         </div>
 
         <div class="col-lg-5 col-md-12" data-aos="fade-up" data-aos-delay="300">
-          <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+          <form [formGroup]="requestForm" (ngSubmit)="sendRequest()" class="php-email-form">
 
             <div class="form-group">
               <input
                 type="text"
-                name="name"
                 class="form-control"
-                id="name"
+                formControlName="fullName"
                 placeholder="Nombre completo"
                 required>
             </div>
+
             <div class="form-group">
               <input
                 type="email"
                 class="form-control"
-                name="email"
-                id="email"
+                formControlName="email"
                 placeholder="Correo electrónico"
                 required>
             </div>
+
             <div class="form-group">
               <input
                 type="tel"
                 class="form-control"
-                name="subject"
-                id="subject"
+                formControlName="phone"
                 placeholder="Teléfono de contacto"
                 required>
             </div>
+
             <div class="form-group">
               <textarea
                 class="form-control text-muted"
-                name="message"
+                formControlName="content"
                 rows="5"
                 placeholder="¿Cúal es tu consulta?" value="¿Cúal es tu consulta?"
                 required></textarea>
             </div>
-            <div class="my-3">
-              <div class="loading">Loading</div>
-              <div class="error-message"></div>
-              <div class="sent-message">Tu mensaje ha sido enviado. Gracias.</div>
-            </div>
+
+<!--            <div class="my-3">-->
+<!--              <div class="loading">Loading</div>-->
+<!--              <div class="error-message"></div>-->
+<!--              <div class="sent-message">Tu mensaje ha sido enviado. Gracias.</div>-->
+<!--            </div>-->
+
             <div class="text-center">
               <button type="submit">Enviar consulta</button>
             </div>
