--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,33 +21,42 @@
 
         <li><a class="nav-link scrollto " href="#testimonials">Casos de éxito</a></li>
 
-        <li class="dropdown"><a href="#accounting"><span>Contable</span> <i class="bi bi-chevron-down"></i></a>
-          <ul>
-            <li><a href="#">Tributaria</a></li>
-            <li><a href="#">Laboral</a></li>
-            <li><a href="#">Auditoria</a></li>
-          </ul>
-        </li>
+<!--        <li class="dropdown"><a href="#accounting"><span>Contable</span> <i class="bi bi-chevron-down"></i></a>-->
+<!--          <ul>-->
+<!--            <li><a href="#">Tributaria</a></li>-->
+<!--            <li><a href="#">Laboral</a></li>-->
+<!--            <li><a href="#">Auditoria</a></li>-->
+<!--          </ul>-->
+<!--        </li>-->
 
-        <li class="dropdown"><a href="#legal"><span>Legal</span> <i class="bi bi-chevron-down"></i></a>
-          <ul>
-            <li><a href="#">Familia</a></li>
-            <li><a href="#">Mineria</a></li>
-            <li><a href="#">Laboral</a></li>
-            <li><a href="#">Empresarial</a></li>
-          </ul>
-        </li>
+<!--        <li class="dropdown"><a href="#legal"><span>Legal</span> <i class="bi bi-chevron-down"></i></a>-->
+<!--          <ul>-->
+<!--            <li><a href="#">Familia</a></li>-->
+<!--            <li><a href="#">Mineria</a></li>-->
+<!--            <li><a href="#">Laboral</a></li>-->
+<!--            <li><a href="#">Empresarial</a></li>-->
+<!--          </ul>-->
+<!--        </li>-->
 
-        <li class="dropdown"><a href="#systems"><span>Tecnológia</span> <i class="bi bi-chevron-down"></i></a>
-          <ul>
-            <li><a href="#">Diseño de páginas web</a></li>
-            <li><a href="#">Desarrollo de sistemas</a></li>
-            <li><a href="#">Desarrollo de apps</a></li>
-            <li><a href="#">Implementación de redes</a></li>
-            <li><a href="#">Instalación y soporte de redes</a></li>
-            <li><a href="#">Venta y alquiler de hardware</a></li>
-          </ul>
-        </li>
+<!--        <li class="dropdown"><a href="#labor"><span>Laboral</span> <i class="bi bi-chevron-down"></i></a>-->
+<!--          <ul>-->
+<!--            <li><a href="#">Familia</a></li>-->
+<!--            <li><a href="#">Mineria</a></li>-->
+<!--            <li><a href="#">Laboral</a></li>-->
+<!--            <li><a href="#">Empresarial</a></li>-->
+<!--          </ul>-->
+<!--        </li>-->
+
+<!--        <li class="dropdown"><a href="#systems"><span>Tecnológia</span> <i class="bi bi-chevron-down"></i></a>-->
+<!--          <ul>-->
+<!--            <li><a href="#">Diseño de páginas web</a></li>-->
+<!--            <li><a href="#">Desarrollo de sistemas</a></li>-->
+<!--            <li><a href="#">Desarrollo de apps</a></li>-->
+<!--            <li><a href="#">Implementación de redes</a></li>-->
+<!--            <li><a href="#">Instalación y soporte de redes</a></li>-->
+<!--            <li><a href="#">Venta y alquiler de hardware</a></li>-->
+<!--          </ul>-->
+<!--        </li>-->
 
         <li><a class="getstarted scrollto" href="#contact">Contáctanos</a></li>
       </ul>
@@ -488,7 +497,13 @@
             <p>Comunícate con nosotros a través del formulario o escríbenos directamente a nuestro canal de WhatsApp.
               También puedes visitar nuestras redes sociales.</p>
             <div class="social-links">
-              <a href="#" class="whastapp"><i class="bi bi-whatsapp"></i></a>
+
+              <a
+                href="https://web.whatsapp.com/send?phone=51948162010&text=Hola%20tengo%20una%20consulta%20que%20realizar%20..."
+                target="_blank"
+                class="whastapp"
+              ><i class="bi bi-whatsapp"></i></a>
+
               <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
               <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
               <a href="#" class="twitter"><i class="bi bi-youtube"></i></a>
@@ -510,7 +525,7 @@
 
             <div>
               <i class="ri-phone-line"></i>
-              <p>+51 948 162 010</p>
+              <p><a class="text-dark" href="tel:+51948162010">+51 948 162 010</a></p>
             </div>
 
           </div>
@@ -555,11 +570,21 @@
                 required></textarea>
             </div>
 
-<!--            <div class="my-3">-->
-<!--              <div class="loading">Loading</div>-->
-<!--              <div class="error-message"></div>-->
-<!--              <div class="sent-message">Tu mensaje ha sido enviado. Gracias.</div>-->
-<!--            </div>-->
+            <div class="my-3">
+              @if (messageFormType === 'success') {
+                <div class="alert alert-success" role="alert">
+                  {{ messageFormContent }}
+                </div>
+              } @else if (messageFormType === 'warning') {
+                <div class="alert alert-warning" role="alert">
+                  {{ messageFormContent }}
+                </div>
+              } @else if (messageFormType === 'danger') {
+                <div class="alert alert-danger" role="alert">
+                  {{ messageFormContent }}
+                </div>
+              }
+            </div>
 
             <div class="text-center">
               <button type="submit">Enviar consulta</button>
