--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,9 +2,15 @@
 <!---------------------- NAVBAR ----------------------->
 <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
   <div class="container">
-    <h1>
-      <a class="navbar-brand fw-bold fs-2" href="#homeSection">Grupo Valle</a>
-    </h1>
+<!--        <h1>-->
+<!--          <a class="navbar-brand fw-bold fs-2" href="#homeSection">Grupo Valle</a>-->
+<!--        </h1>-->
+
+    <a class="navbar-brand" href="#homeSection">
+      <img class="d-inline-block align-text-top me-3" src="assets/images/navbar/navbar-logo.png" alt="Logo" style="height: 80px; width: 80px">
+      <h1 class="fw-bold fs-2">Grupo Valle</h1>
+    </a>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
