--- a/src/app/components/home/contact/contact.component.html
+++ b/src/app/components/home/contact/contact.component.html
@@ -7,7 +7,13 @@
   <div class="row">
     <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
       <div class="contact-about">
-        <h3>Grupo Valle</h3>
+
+        <div class="d-inline-flex">
+          <img class="me-2" src="assets/images/navbar/navbar-logo.png" alt="Logo" style="height: 64px">
+          <h5 class="fw-bold fs-2 lh-lg">Grupo Valle</h5>
+        </div>
+
+
         <p>Comunícate con nosotros a través del formulario o escríbenos directamente a nuestro canal de WhatsApp.
           También puedes visitar nuestras redes sociales.</p>
         <div class="social-links">
