--- a/src/styles.scss
+++ b/src/styles.scss
@@ -814,3 +814,53 @@ section {
     z-index: 99;
   }
 }
+
+/*******************************************************/
+/******************** TEAM - MEMBERS *******************/
+/*******************************************************/
+.profile {
+  background-color: #008CFF;
+  text-align: center;
+  padding: 40px 0 20px 0;
+  color: #ffffff;
+}
+
+.avatar {
+  margin-bottom: 30px;
+}
+
+.avatar > img {
+  margin-bottom: 20px;
+  border-radius: 50%;
+  border: 10px solid white;
+}
+
+.avatar > h1 {
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+.avatar > p {
+  font-size: 1.2em;
+}
+
+.links a {
+  border-radius: 50%;
+  padding: 20px 10px 6px 10px;
+  background: white;
+  transition: 0.3s;
+}
+
+.links a:hover {
+  background: #008CFF;
+  color: #fff;
+  transition: 0.3s;
+}
+
+.links i {
+  font-size: 32px;
+}
+.resume{
+  padding: 20px 40px 0 40px;
+  text-align: justify;
+}
